--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,11 @@
-<h1>UserMailer#password_reset</h1>
+<h1>Password reset</h1>
 
 <p>
-  <%= @greeting %>, find me in app/views/user_mailer/password_reset.html.erb
+  To reset your password click the link below:
 </p>
+
+<%= link_to "Reset password", edit_password_reset_url(@user.reset_token, email: @user.email) %>
+
+<p>This link will self-destruct in 120 minutes.</p>
+
+<p>If you didn't request a password reset, this never happened.</p>
