--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -4,12 +4,13 @@
   <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
   <span class="content">
     <%= micropost.content %>
-    <!-- picture? method from carrierwave -->
-    <%= image_tag micropost.picture.url if micropost.picture? %>  
+    <%= image_tag micropost.picture.url if micropost.picture? %>
   </span>
-  <span class="timestamp">Posted <%= time_ago_in_words(micropost.created_at) %> ago.
+  <span class="timestamp">
+    Posted <%= time_ago_in_words(micropost.created_at) %> ago.
     <% if current_user?(micropost.user) %>
-      <%= link_to "delete", micropost, method: :delete, data: { confirm: "Are you sure?" } %>
+      <%= link_to "delete", micropost, method: :delete,
+                                       data: { confirm: "You sure?" } %>
     <% end %>
   </span>
 </li>
